# django-yoloquery

./: .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  code-quality.yml  dependabot.yml  release.yml
django_yoloquery/: __init__.py
tests/: conftest.py  settings.py  test_core.py  test_errors.py  test_integration.py
tests/testapp/: apps.py  models.py
