[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-yoloquery"
version = "0.1.4"
description = "LLM-backed, structured JSON output, schema-aware natural language queries for Django ORM"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Django YOLOQuery Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment", 
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1", 
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["django", "orm", "llm", "ai", "query", "natural-language", "openai"]
requires-python = ">=3.8"
dependencies = [
    "Django>=3.2,<5.3",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django", 
    "black",
    "flake8",
    "mypy",
    "django-stubs",
]
test = [
    "pytest",
    "pytest-django",
]

[project.urls]
Homepage = "https://github.com/zhuang42/django-yoloquery"
Repository = "https://github.com/zhuang42/django-yoloquery"
Issues = "https://github.com/zhuang42/django-yoloquery/issues"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.package-data]
django_yoloquery = ["py.typed"]

[tool.black]
line-length = 120
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true